--- a/media/index.html
+++ b/media/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet"  href="style.css">
 </head>
 <body>
-    <nav class="menu">
-        <ul class="list">
+    <nav class="list">
+        <ul class="menu">
             <a class="name">Avinov Maksim</a>
             <a class="menue">Главная</a>
             <a class="menue">Прайс</a>
@@ -18,14 +18,14 @@
         </ul>
     </nav>
     <div class="conteiner">
-        <img class="pick1" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\grid\asserts\img\img1.jpg" alt="1" 1/>
-        <img class="pick2" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\grid\asserts\img\img2.jpg" alt="2" 2 />
-        <img class="pick3" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\grid\asserts\img\img3.jpg" alt="3" 3 />
-        <img class="pick4" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\grid\asserts\img\img4.jpg" alt="4" 4 />
-        <img class="pick5" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\grid\asserts\img\img5.jpg" alt="5" 5 />
-        <img class="pick6" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\grid\asserts\img\img6.jpg" alt="6" 6 />
-        <img class="pick7" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\grid\asserts\img\img7.jpg" alt="7" 5 />
-        <img class="pick8" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\grid\asserts\img\img8.jpg" alt="8" 6 />
+        <img class="pick1" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\media\img\img1.jpg" alt="1" 1/>
+        <img class="pick2" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\media\img\img2.jpg" alt="2" 2 />
+        <img class="pick3" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\media\img\img3.jpg" alt="3" 3 />
+        <img class="pick4" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\media\img\img4.jpg" alt="4" 4 />
+        <img class="pick5" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\media\img\img5.jpg" alt="5" 5 />
+        <img class="pick6" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\media\img\img6.jpg" alt="6" 6 />
+        <img class="pick7" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\media\img\img7.jpg" alt="7" 5 />
+        <img class="pick8" src="C:\Users\Мвидео\Desktop\Шарага\Сетевые языки\prak\SA50-1-20_AvinovMaksim\media\img\img8.jpg" alt="8" 6 />
     </div>
 </body>
 </html>
